new updated things

--- a/CD6.csproj
+++ b/CD6.csproj
@@ -165,6 +165,7 @@
       <DependentUpon>sos.aspx</DependentUpon>
     </Compile>
     <Compile Include="SoSFunctions.cs" />
+    <Compile Include="SosHistory.cs" />
     <Compile Include="sosTemplate.aspx.cs">
       <DependentUpon>sosTemplate.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
