--- a/CD6.csproj
+++ b/CD6.csproj
@@ -92,6 +92,7 @@
     <Content Include="sosTemplate.aspx" />
     <Content Include="sos_create.aspx" />
     <Content Include="sos_search.aspx" />
+    <Content Include="sos_track.aspx" />
     <Content Include="sos_upload.aspx" />
     <Content Include="sos_view.aspx" />
     <Content Include="uploadSoS.aspx" />
@@ -186,6 +187,13 @@
     </Compile>
     <Compile Include="sos_search.aspx.designer.cs">
       <DependentUpon>sos_search.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="sos_track.aspx.cs">
+      <DependentUpon>sos_track.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="sos_track.aspx.designer.cs">
+      <DependentUpon>sos_track.aspx</DependentUpon>
     </Compile>
     <Compile Include="sos_upload.aspx.cs">
       <DependentUpon>sos_upload.aspx</DependentUpon>
