--- a/CD6.csproj
+++ b/CD6.csproj
@@ -86,7 +86,6 @@
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\info_popup.js" />
     <Content Include="login.aspx" />
-    <Content Include="manageTemplates.aspx" />
     <Content Include="recipient.aspx" />
     <Content Include="sos.aspx" />
     <Content Include="sosTemplate.aspx" />
@@ -95,6 +94,9 @@
     <Content Include="sos_track.aspx" />
     <Content Include="sos_upload.aspx" />
     <Content Include="sos_view.aspx" />
+    <Content Include="template_asset.aspx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="users.aspx" />
     <Content Include="Web.config" />
     <Content Include="assetSearchForSoS.aspx" />
@@ -133,13 +135,6 @@
     </Compile>
     <Compile Include="login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="manageTemplates.aspx.cs">
-      <DependentUpon>manageTemplates.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="manageTemplates.aspx.designer.cs">
-      <DependentUpon>manageTemplates.aspx</DependentUpon>
     </Compile>
     <Compile Include="master.Master.cs">
       <DependentUpon>master.Master</DependentUpon>
@@ -207,6 +202,15 @@
     </Compile>
     <Compile Include="sos_view.aspx.designer.cs">
       <DependentUpon>sos_view.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="template_asset.aspx.cs">
+      <DependentUpon>template_asset.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="template_asset.aspx.designer.cs">
+      <DependentUpon>template_asset.aspx</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="users.aspx.cs">
       <DependentUpon>users.aspx</DependentUpon>
