--- a/CD6.csproj
+++ b/CD6.csproj
@@ -76,6 +76,7 @@
     <Content Include="css\sos.css" />
     <Content Include="css\sticky-footer.css" />
     <Content Include="css\style.css" />
+    <Content Include="CurlPage.aspx" />
     <Content Include="email.aspx" />
     <Content Include="fonts\BebasNeue-webfont.svg" />
     <Content Include="fonts\DroidSans-webfont.svg" />
@@ -119,6 +120,13 @@
     <Compile Include="Asset.cs" />
     <Compile Include="AssetFunctions.cs" />
     <Compile Include="AssetRecipient.cs" />
+    <Compile Include="CurlPage.aspx.cs">
+      <DependentUpon>CurlPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CurlPage.aspx.designer.cs">
+      <DependentUpon>CurlPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="email.aspx.cs">
       <DependentUpon>email.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
