--- a/Tools/Tools.csproj
+++ b/Tools/Tools.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSV.cs" />
     <Compile Include="DBAccess.cs" />
     <Compile Include="Email.cs" />
     <Compile Include="InputValidation.cs" />
